# opentracing_example

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  docker-compose.yml  pyproject.toml  subscriber.py
app/: api_client.py  config.py  db.py  publisher.py  queue.py  tracer.py  uploader.py
docs/: sequence.puml
